# fractals

./: Cargo.toml  README.md
src/: char.rs  gui.rs  lib.rs  main.rs  mandelbrot.rs  rgb.rs
src/lib/: fractal.rs  julia.rs  mandelbrot.rs
